# bagmetti

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py
docs/: filter.md  rename.md
samples/: filter.conf  filter.yaml  rename.yaml
scripts/: filter.py  rename.py
src/bagmetti/: rules.py  version.py
src/bagmetti/rules/: __init__.py  filter.py  rename.py
test/: filter.test  rename.test  test_filter.py  test_rename.py
test/module/: test_rename.py
